# ML-Supply-Chain-Security-Scanner

./: .gitignore  LICENSE  PROJECT_REPORT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: download_ml_training_corpus.py  download_real_world_fixtures.py  evaluate_anomaly_model.py  generate_h5_fixtures.py  generate_onnx_fixtures.py  generate_pickle_fixtures.py  generate_test_report.py  generate_torch_zip_fixtures.py  train_pickle_anomaly_model.py
src/mlscan/: cli.py  detect.py  report.py
src/mlscan/scanners/h5_scanner/: __init__.py  scanner.py
src/mlscan/scanners/onnx_scanner/: __init__.py  rules.py  scanner.py
src/mlscan/scanners/pickle_scanner/: __init__.py  anomaly.py  container.py  features.py  opcodes.py  rules.py
tests/: conftest.py  test_anomaly.py  test_cli.py  test_combination_findings.py  test_detect.py  test_fuzzing.py  test_h5_scanner.py  test_h5_scanner_parametrized.py  test_onnx_scanner.py  test_onnx_scanner_parametrized.py  test_parse_error_handling.py  test_pickle_scanner.py  test_pickle_scanner_parametrized.py  test_real_world_fixtures.py  test_torch_zip_checkpoints.py
tests/fixtures/benign/: benign_dense_model.h5  benign_dict.pkl  benign_identity.onnx  benign_torch_checkpoint.pt
tests/fixtures/benign/real_world/: LiquidAI__LFM2.5-230M-ONNX.onnx  Newt007__bin_cls_att.h5.h5  kojongmo__LightGBM_Q1_model.pkl.pkl
tests/fixtures/malicious/: custom_domain_op.onnx  external_data_path_traversal.onnx  gadget_chain_subclasses.pkl  int_opcode_hex_evasion.pkl  lambda_marshalled_bytecode.h5  lambda_named_function_ref.h5  oversized_tensor_dim.onnx  reduce_subprocess_call.pkl  zip_wrapped_reduce_os_system.pt
ui/: app.py
