[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mlscan"
version = "0.1.0"
description = "Static security scanner for ML model files (pickle, ONNX, HDF5/Keras)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "protobuf>=4.25",
    "h5py>=3.10",
    "onnx>=1.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "huggingface_hub>=0.23",
    "hypothesis>=6.100",
]
ml = [
    "scikit-learn>=1.4",
    "skops>=0.10",
]

[project.scripts]
mlscan = "mlscan.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
