[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mlscan"
version = "0.1.0"
description = "Static security scanner for ML model files (pickle, ONNX, HDF5/Keras)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "protobuf>=4.25",
    "h5py>=3.10",
    "onnx>=1.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "huggingface_hub>=0.23",
    "hypothesis>=6.100",
    "pytest-timeout>=2.3",
    "pytest-html>=4.2",
    "pytest-cov>=5.0",
]
ml = [
    "scikit-learn>=1.4",
    "skops>=0.10",
]
ui = [
    "streamlit>=1.30",
]

[project.scripts]
mlscan = "mlscan.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mlscan = ["models/*.skops"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
# Global safety net: no single test may run longer than this, regardless
# of cause. A test suite that can hang indefinitely is worse than one
# that fails loudly -- this is the same fail-safe philosophy the scanner
# itself follows (see PICKLE_PARSE_ERROR, ONNX_PARSE_ERROR, etc.).
# Found necessary in practice: CI hung for 1.5h+ with no timeout at all.
timeout = 120
